name:                ekg-json
version:             0.1.0.0
synopsis:            JSON encoding of ekg metrics
description:
  Encodes ekg metrics as JSON, using the same encoding as used by the
  ekg package, thus allowing ekg metrics to be served by other HTTP
  servers than the one used by the ekg package.
homepage:            https://github.com/tibbe/ekg-json
bug-reports:         https://github.com/tibbe/ekg-json/issues
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          johan.tibell@gmail.com
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    System.Metrics.Json
  build-depends:
    aeson < 0.11,
    base >= 4.5 && < 4.9,
    ekg-core >= 0.1 && < 0.2,
    text < 1.3,
    unordered-containers < 0.3

  default-language: Haskell2010
  ghc-options:      -Wall

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Main.hs
  build-depends:     aeson < 0.11,
                     base >= 4.0 && < 4.9,
                     ekg-core,
                     ekg-json,
                     test-framework >= 0.3.3,
                     test-framework-quickcheck2 >= 0.2.9,
                     text < 1.3,
                     QuickCheck >= 2.4.0.1

  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: https://github.com/tibbe/ekg-json.git
