cabal-version:      3.0
name:               ekg-json
version:            0.1.0.8
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:
  Johan Tibell <johan.tibell@gmail.com>,
  Mikhail Glushenkov <mikhail.glushenkov@gmail.com>

author:             Johan Tibell
tested-with:
  GHC ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.2.8
   || ==9.4.7
   || ==9.6.3
   || ==9.8.1

homepage:           https://github.com/tibbe/ekg-json
bug-reports:        https://github.com/tibbe/ekg-json/issues
synopsis:           JSON encoding of ekg metrics
description:
  Encodes ekg metrics as JSON, using the same encoding as used by the
  ekg package, thus allowing ekg metrics to be served by other HTTP
  servers than the one used by the ekg package.

category:           Distribution
build-type:         Simple
extra-source-files: CHANGES.md

source-repository head
  type:     git
  location: https://github.com/tibbe/ekg-json.git

library
  exposed-modules:  System.Metrics.Json
  default-language: Haskell2010
  build-depends:
    , aeson                 ^>=2.2
    , base                  >=4.11  && <4.20
    , ekg-core              ^>=0.1
    , text                  >=1.2.4 && <2.2
    , unordered-containers  <0.3
